--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,6 +3,9 @@ description: svg_to_paint generates dart code from a svg file. Given an xml file
 version: 1.0.9+5
 homepage: https://github.com/FrancescoCatani/svg_to_paint_dart
 
+executables:
+  svg_to_paint:
+
 environment:
   sdk: ">=2.12.0 <3.0.0"
   flutter: ">=1.16.0"
